# Paytato-v1

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
agent/: __init__.py  __main__.py  keywords.py  main.py  paytato.py  prompts.py  shopper.py  tracing.py  types.py  validator.py
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: cli.tsx
cli/src/components/: InputForm.tsx  Progress.tsx  Results.tsx  Welcome.tsx
cli/src/utils/: runAgent.ts
